# cloud-cost-saver

./: .cloudsaving.yaml  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  entrypoint.sh  samconfig.toml  template.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/actions/cloud_cost_saver/: Dockerfile
.github/workflows/: check_and_lint.yaml  cloud_cost_saver.yml  test.yaml
src/: checker.rs  error_reporter.rs  main.rs  sample-cfn.yaml
src/fixtures/: .cloudsaving.yaml
src/fixtures/aws/: cfn-lambda-004.yaml  cfn-lambda-examples.yaml  cfn-parsing-test.yaml  cfn-testing-pass.yaml  cfn-testing.yaml  samconfig.toml
src/parsers/: cfn.rs  config.rs  iac.rs  mod.rs
src/rules/: mod.rs  violations.rs
src/rules/aws/: cloudwatch.rs  lambda.rs  mod.rs
