[package]
name = "ccs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
marked-yaml = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
indexmap = { version = "2.7.0", features = ["serde"] }

[dev-dependencies]
rstest = "0.23.0"
